# stm32f4_unit_components

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  stn32_f4_unit.ioc  toolchain_target_debug.cmake  toolchain_target_release.cmake
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Src/: CMakeLists.txt  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Src/HAL_Unit/: CMakeLists.txt  uart_manipulation.c  uart_manipulation.h
